--- a/www/css/app.css
+++ b/www/css/app.css
@@ -24,16 +24,10 @@ textarea {
     margin-bottom: 8px;
 }
 
-.auto-filled-shadow {
-    box-shadow: 0 2px 5px 0 rgb(103 58 183 / 48%), 0 2px 10px 0 rgb(0 0 0 / 12%)!important;
-}
-
-.auto-filled-border {
-    border: solid 1px #e91e6380;
-}
-
-.auto-filled-border-bottom {
-    border-bottom: solid 1px #e91e6380;
+input[disabled="disabled"] {
+    color: #000;
+    background-color: #f5f5f5;
+    border: solid 1px #ccc;
 }
 
 .info {
@@ -136,21 +130,19 @@ textarea {
     min-height: 150px;
     min-width: 130px;
     max-width: 160px;
-    margin: auto;
     background-size: cover;
-    margin-right: 16px;
-    margin-bottom: 16px;
+    margin: auto 16px 16px auto;
 }
 
 #attributes .att {
     width: 60%;
     height: 46%;
     font-size: 44px;
-    margin: auto;
     display: block;
     text-align: center;
     box-shadow: 0 2px 5px 0 rgb(116 155 226 / 48%), 0 2px 10px 0 rgb(0 0 0 / 12%);
     border-radius: 4px;
+    margin: auto auto 15px;
 }
 
 #attributes .att-mod {
@@ -159,17 +151,11 @@ textarea {
     margin: auto;
     display: block;
     text-align: center;
-    background: transparent;
     border-radius: 4px;
     padding: 5px;
-    /*box-shadow: 0 2px 5px 0 rgb(116 155 226 / 48%), 0 2px 10px 0 rgb(0 0 0 / 12%);*/
 }
 
 #saves-skills input[type="text"] {
-    border-bottom: 1px solid #000000;
-    border-left: 1px solid #e91e6380;
-    border-right: 1px solid #e91e6380;
-    border-top: 1px solid #e91e6380;
     text-align: center;
     margin-top: 4px;
 }
@@ -435,7 +421,7 @@ td {
     height: 90px;
     background-size: contain;
     background-repeat: no-repeat;
-    background-image: url(../imgs/symbol.jpeg);
+    background-image: url(../imgs/Symbol.jpeg);
     background-position: center center;
 }
 
