--- a/www/css/app.css
+++ b/www/css/app.css
@@ -119,7 +119,7 @@ input[disabled="disabled"] {
 }
 
 #top-bar .box:last-child {
-    margin-right: 0px;
+    margin-right: 0;
 }
 
 #attributes .label {
@@ -197,10 +197,9 @@ input[disabled="disabled"] {
     width: 70%;
     height: 66%;
     font-size: 44px;
-    margin: auto;
     display: block;
     text-align: center;
-    margin-top: 15%;
+    margin: 15% auto auto;
     border-radius: 7px;
     box-shadow: 0 2px 5px 0 rgb(116 155 226 / 48%), 0 2px 10px 0 rgb(0 0 0 / 12%);
 }
@@ -305,7 +304,7 @@ td {
 
 #add-attack .title {
     text-align: center;
-    margin: 10px 0px;
+    margin: 10px 0;
 }
 
 #add-attack #attack-form {
@@ -413,7 +412,7 @@ td {
     min-height: 300px;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url(../imgs/character.jpeg);
+    background-image: url(../img/character.jpeg);
     background-position: center center;
 }
 
@@ -421,7 +420,7 @@ td {
     height: 90px;
     background-size: contain;
     background-repeat: no-repeat;
-    background-image: url(../imgs/Symbol.jpeg);
+    background-image: url(../img/Symbol.jpeg);
     background-position: center center;
 }
 
